# not-co-logger

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
notcologger/: __init__.py
tests/: test_logger.py
