[tool.poetry]
name = "notcologger"
version = "0.2.0"
description = "Not CO Logger, a cloud logging library."
authors = ["Juha-Matti Tapio <jmtapio@verkkotelakka.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmtapio/not-co-logger"


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
